thumnail bugs fixed;

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
   <title>User Testing</title>
   <!-- <link rel="canonical" href="https://getbootstrap.com/docs/5.3/examples/badges/"> -->
   <link href="./bootstrap-5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link href="./main.css" rel="stylesheet">
-  <script src="./main.js" type="text/javascript"></script>
+  <link href="./index.css" rel="stylesheet">
+  <script src="./index.js" type="text/javascript"></script>
 
 
 </head>
@@ -126,8 +126,8 @@
         <div class="nav-item dropdown mx-2">
           <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown" aria-expanded="false">Product</a>
           <ul class="dropdown-menu">
-            <li><a class="dropdown-item" onclick="addInput('A watch'), addTag() 
-                addInput('with straps in'), addTag(),addStyle()">
+            <li><a class="dropdown-item" onclick="addInput('A watch'); addTag() 
+                addInput('with straps in'); addTag(); addStyle();">
                 Watch</a>
             </li>
             <li><a class="dropdown-item" onclick="addInput('A chair'),addTag(), 
