--- a/index.html
+++ b/index.html
@@ -94,24 +94,26 @@
 
 
 
-  <header class="p-2 mb-1 border-bottom">
-    <div class="container">
-      <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
-        <a href="#" class="d-flex align-items-center mb-2 mb-lg-0 link-body-emphasis text-decoration-none">
-          <img class="me-3" height="20" src="img/logo.png" alt="logo">
+  <div class="container-fluid">
+    <header class="p-2 mb-1 border-bottom">
+      <div class="container-fluid">
+        <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
+          <a href="#" class="d-flex align-items-center mb-2 mb-lg-0 link-body-emphasis text-decoration-none">
+            <img class="me-3" height="20" src="img/logo.png" alt="logo">
 
-        </a>
+          </a>
 
-        <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
-          <li><a href="#" class="nav-link px-2 link-secondary">History</a></li>
-          <li><a href="#" class="nav-link px-2 link-secondary">Collection</a></li>
-        </ul>
+          <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
+            <li><a href="#" class="nav-link px-2 link-secondary">History</a></li>
+            <li><a href="#" class="nav-link px-2 link-secondary">Collection</a></li>
+          </ul>
+        </div>
       </div>
-    </div>
-  </header>
+    </header>
+  </div>
 
 
-  <div class="container p-0 mx-5 my-5 py-5 px-5">
+  <div class="container-fluid p-0 my-5 py-5 px-5">
 
     <nav class="navbar navbar-expand-lg bg-body-tertiary rounded" aria-label="Thirteenth navbar example">
 
@@ -162,7 +164,7 @@
       </div>
     </nav>
 
-    <div class="container mb-3">
+    <div class="container-fluid mb-3">
       <id="inline-text">
         <span class="text-muted" id="inline-text"> Suggested prompt: &nbsp
         </span>
@@ -189,18 +191,7 @@
   <script src="./bootstrap-5.3.0/dist/js/bootstrap.bundle.min.js">
 
   </script>
-  <script>
-    window.onload = function () {
-      const source = document.getElementById('objName');
-      const result = document.getElementById('promptText');
 
-      const inputHandler = function (e) {
-        result.innerText = e.target.value;
-      }
-
-      source.addEventListener('input', inputHandler);
-    }
-  </script>
 
 </body>
 
